# work-stealing

./: CMakeLists.txt  README.org  results.json
.github/workflows/: cmake.yml
apps/: CMakeLists.txt  app.cpp
include/ws/: lib.hpp
src/: CMakeLists.txt  chaselev.cpp  cilk.cpp  graph.cpp  idempotent.cpp  lib.cpp  params.cpp  utils.cpp  wsmult.cpp
tests/: CMakeLists.txt  main.cpp
